@@ -10,6 +10,7 @@ all:
 	$(KOS_MAKE) -C pvrmark_strips
 	$(KOS_MAKE) -C pvrmark_strips_direct
 	$(KOS_MAKE) -C texture_render
+	$(KOS_MAKE) -C modifier_volume
 
 clean:
 	$(KOS_MAKE) -C plasma clean
@@ -17,6 +18,7 @@ clean:
 	$(KOS_MAKE) -C pvrmark_strips clean
 	$(KOS_MAKE) -C pvrmark_strips_direct clean
 	$(KOS_MAKE) -C texture_render clean
+	$(KOS_MAKE) -C modifier_volume clean
 		
 dist:
 	$(KOS_MAKE) -C plasma dist
@@ -24,5 +26,6 @@ dist:
 	$(KOS_MAKE) -C pvrmark_strips dist
 	$(KOS_MAKE) -C pvrmark_strips_direct dist
 	$(KOS_MAKE) -C texture_render dist
+	$(KOS_MAKE) -C modifier_volume dist
 
 
