@@ -1,0 +1,32 @@
+#
+# Basic KallistiOS skeleton / test program
+# (c)2001 Dan Potter
+#   
+
+# Put the filename of the output binary here
+TARGET = modifier.elf
+
+# List all of your C files here, but change the extension to ".o"
+OBJS = modifier.o
+
+all: rm-elf $(TARGET)
+
+include $(KOS_BASE)/Makefile.rules
+
+clean:
+	-rm -f $(TARGET) $(OBJS)
+
+rm-elf:
+	-rm -f $(TARGET)
+
+$(TARGET): $(OBJS)
+	$(KOS_CC) $(KOS_CFLAGS) $(KOS_LDFLAGS) -o $(TARGET) $(KOS_START) \
+		$(OBJS) $(OBJEXTRA) $(KOS_LIBS)
+
+run: $(TARGET)
+	$(KOS_LOADER) $(TARGET) -n
+
+dist:
+	rm -f $(OBJS)
+	$(KOS_STRIP) $(TARGET)
+
