@@ -182,7 +182,9 @@ KallistiOS version 1.3.0 -----------------------------------------------
 - *** Added kthread_once function (think pthread_once) [LS]
 - *** Added pthreads-like thread-local storage [LS]
 - DC  Added in support for untextured PVR sprites and added support for the more
-      correct polygon header to be sent for sprites [LS] 
+      correct polygon header to be sent for sprites [LS]
+- DC  Added in some support functions for PVR modifier volumes (and an example
+      program that uses them) [LS]
 
 KallistiOS version 1.2.0 -----------------------------------------------
 - DC  Fix to use DCARM7_CFLAGS when compiling ARM driver [Christian Groessler == CG]
